--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,11 +4,11 @@
     
     {{ content }}
 
-    <footer class="article--footer">
-      <time class="one--half">
+    <footer class="article--footer gw">
+      <time class="g one-half">
         {{ page.date | date_to_string }}
       </time>
-      <div class="author one--half">
+      <div class="g one-half  text--right">
         written by <a href="http://google.com/+KevinGimbel">Kevin Gimbel</a>
       </div>
     </footer>
