--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,64 +14,43 @@
     <meta name="twitter:title" content="{% if page.title %} {{ page.title }} &ndash; {% endif %} Kevin Gimbel &ndash; Web-Development, CSS, Sass, UI, UX, Thoughts, Hacks">
     <meta name="twitter:description" content="{{ page.excerpt | strip_html}} (Read more...)">
     <!-- 
-    I used this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
+    I use this solution by Christian Fei to remove the P tags from the excerpt. https://gist.github.com/christian-fei/41b51d9ad9fa55ccbb10 
     -->
-
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
     
     <script type="text/javascript" src="/assets/js/main.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-44634206-1', 'kevingimbel.com');
-      ga('send', 'pageview');
-    </script>
 </head>
 <body>
  <a href="" class="backtop" id="back-top"></a>
-<section class="wrapper">
-  <header class="site--header" id="site-header">
-  <aside class="sidebar">
-    <a href="/">
-      <img src="/assets/img/2013_11_kevingimbel.jpg" alt="Kevin Gimbel (with funny, curly hair)" />
-    </a>
-    </aside> <!-- sidebar -->
-    <div class="intro">
-    <h1>Kevin Gimbel</h1>
-    <p><span id="phrase">I build things.</span></p>
-<nav class="site-navigation" role="navigation">
-  <ul>
-    <li><a href="/" class="nav-item">Home</a></li>
-    <li><a href="/about" class="nav-item">About</a></li>
-    <li><a href="/cv" class="nav-item">CV</a></li>
-    <li><a href="/archive" class="nav-item">Archive</a></li>
-  </ul>
-  <select name="mobile-menu" id="mobileMenu" class="nav--mobile">
-    <option value="">MENU</option>
-    <option value="http://kevingimbel.com/">Home</option>
-    <option value="http://kevingimbel.com/about">About</option>
-    <option value="http://kevingimbel.com/cv">CV</option>
-    <option value="http://kevingimbel.com/archive">Archive</option>
-  </select>
-  </nav>
-</div> <!-- intro -->
 
-<!-- 
-<div class="social">
-     <a href="http://codepen.io/kevingimbel" class="elsewhere" title="CodePen"><span class="entypo-code"></span></a>
-     <a href="http://github.com/kevingimbel" class="elsewhere" title="Github"><span class="entypo-github"></span></a>
-     <a href="http://twitter.com/_kevinatari" class="elsewhere" title="Twitter"><span class="entypo-twitter"></span></a>
-     <a href="https://plus.google.com/110655622571669158152?rel=author" class="elsewhere" title="Google+"><span class="entypo-gplus"></span></a>
-     <a href="http://instagram.com/_kevinatari" class="elsewhere" title="Instagram"><span class="entypo-instagrem"></span></a>
-     <a href="http://atarijunge.de" class="elsewhere" title="tumblr"><span class="entypo-tumblr"></span></a>
-     <a href="http://www.lastfm.de/user/kevinatari" class="elsewhere" title="Last.fm"><span class="entypo-lastfm"></span></a> 
-</div> -->
-  </aside> <!-- sidebar -->
-  </header>
-  <section class="content {% if page.customclass %} {{page.customclass}} {% endif %}">
+  <header class="site--header  g one-whole" id="site-header">
+    <div class="header--inner">
+        <a href="/">
+          <img class="logo" src="/assets/img/2013_11_kevingimbel.jpg" alt="Kevin Gimbel (with funny, curly hair)" />
+        </a>
+        <div class="intro g one-whole text--center">
+        <h1>Kevin Gimbel</h1>
+        <p><span id="phrase">I build things.</span></p>
+    <nav class="site--navigation" role="navigation">
+      <ul>
+        <li><a href="/" class="nav-item">Home</a></li>
+        <li><a href="/about" class="nav-item">About</a></li>
+        <li><a href="/cv" class="nav-item">CV</a></li>
+        <li><a href="/archive" class="nav-item">Archive</a></li>
+      </ul>
+      <select name="mobile-menu" id="mobileMenu" class="nav--mobile">
+        <option value="">MENU</option>
+        <option value="http://kevingimbel.com/">Home</option>
+        <option value="http://kevingimbel.com/about">About</option>
+        <option value="http://kevingimbel.com/cv">CV</option>
+        <option value="http://kevingimbel.com/archive">Archive</option>
+      </select>
+      </nav>
+    </div> <!-- intro -->
+</div> <!-- header--inner -->
+</header>
+  
+<section class="wrapper gw">
+  <section class="content  g one-whole {% if page.customclass %} {{page.customclass}} {% endif %}">
