--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Lato);
 @import url(http://weloveiconfonts.com/api/?family=entypo);
-/* grid break*/
-article {
-  padding: 1.5em;
-}
-
-/* blue */
-/* used for decoration and accents */
-/* red */
-/* used for decoration and accents */
 .highlight .hll {
   background-color: #333333;
 }
@@ -345,51 +335,659 @@ code, pre {
 }
 
 /* Literal.Number.Integer.Long */
-/* the father is always the container of a Grid system. In the example it's the .wrapper class */
-.site--header, .page--archive, .article--footer {
-  letter-spacing: -0.31em;
+/**
+ * bullgrid
+ *
+ * A grid based on the ideas of inuit.css gridsystem. 
+ *
+ *
+ * @TODO [TimPietrusky] - center vertically / center horizontally 
+ * @TODO [TimPietrusky] - Should we add support for IE <= 7?
+ *
+ *
+ */
+/**
+ * Fluid and nestable grid system, e.g.:
+ *
+   <div class="gw">
+
+     <div class="g one-third">
+       <p>One third grid</p>
+     </div>
+
+     <div class="g two-thirds">
+       <p>Two thirds grid</p>
+     </div>
+
+     <div class="g one-half">
+       <p>One half grid</p>
+     </div>
+
+     <div class="g one-quarter">
+       <p>One quarter grid</p>
+     </div>
+
+     <div class="g one-quarter">
+       <p>One quarter grid</p>
+     </div>
+
+   </div>
+
+   */
+/**
+ * Default spacing 
+ */
+/**
+ * Micro clearfix. 
+ */
+.cf:after, .gw:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-/* every element of the Grid is a son. Notice: You need to apply the width to the specific class! */
-.one--half, .sidebar, .intro, .page--archive .archive--article {
-  letter-spacing: 0em;
-  display: inline-block;
-  vertical-align: top;
+/**
+ * Grid wrapper
+ */
+.gw {
+  /**
+   * Negative margin to negate the padding on the first grid child.
+   */
+  margin-left: -1em;
+  /**
+   * The following declarations allow us to use the `.gw` class on lists.
+   */
+  list-style: none;
+  margin-bottom: 0;
+}
+@media all and (max-width: 80em) {
+  .gw {
+    margin-left: -0.5em;
+  }
 }
 
-/* third level nesting. It's a bit hacky but it works fine for Prototyping. */
-/* Grid Helper */
-.guide__nav {
-  width: 100%;
-  margin: .5em 0;
-  overflow: hidden;
-  *zoom: 1;
-}
+/**
+ * Reverse grid order
+ *
+   <div class="gw  gw--rev">
 
-.guide__nav--link {
-  padding: .3em .5em;
-  color: white;
-  background: #40a0be;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-  font-size: 70%;
-}
-.guide__nav--link:hover {
-  background: #ccc;
-  color: black;
-}
+     <div class="g  one-third">
+       <p>Appears on the right</p>
+     </div>
 
-.prev {
-  float: left;
-}
+     <div class="g  two-thirds">
+       <p>Appears on the left</p>
+     </div>
 
-.next {
+   </div>
+ *
+ */
+.gw--rev > .g {
   float: right;
 }
 
+/**
+ * Very infrequently occuring grid wrappers as children of grid wrappers.
+ */
+.gw > .gw {
+  margin-left: 0;
+}
+
+/**
+ * Grid
+ *
+ */
+.g {
+  float: left;
+  padding-left: 1em;
+}
+@media all and (max-width: 80em) {
+  .g {
+    padding-left: 0.5em;
+  }
+}
+
+/**
+ *
+ * Sizes in human readable format.
+ *
+ */
+/**
+ *
+ * @TODO [TimPietruky] - Do we really need this?
+ * 
+ */
+/*
+ * Hidden
+ */
+.hidden {
+  display: none;
+}
+
+/**
+ * Whole
+ */
+.one-whole {
+  width: 100%;
+}
+
+/**
+ * Halves
+ */
+.one-half, .two-quarters, .three-sixths, .four-eighths, .five-tenths, .six-twelfths {
+  width: 50%;
+}
+
+/**
+ * Thirds
+ */
+.one-third, .two-sixths, .four-twelfths {
+  width: 33.333%;
+}
+
+.two-thirds, .four-sixths, .eight-twelfths {
+  width: 66.666%;
+}
+
+/**
+ * Quarters
+ */
+.one-quarter, .two-eighths, .three-twelfths {
+  width: 25%;
+}
+
+.three-quarters, .six-eighths, .nine-twelfths {
+  width: 75%;
+}
+
+/**
+ * Fifths
+ */
+.one-fifth, .two-tenths {
+  width: 20%;
+}
+
+.two-fifths, .four-tenths {
+  width: 40%;
+}
+
+.three-fifths, .six-tenths {
+  width: 60%;
+}
+
+.four-fifths, .eight-tenths {
+  width: 80%;
+}
+
+/**
+ * Sixths
+ */
+.one-sixth, .two-twelfths {
+  width: 16.666%;
+}
+
+.five-sixths, .ten-twelfths {
+  width: 83.333%;
+}
+
+/**
+ * Eighths
+ */
+.one-eighth {
+  width: 12.5%;
+}
+
+.three-eighths {
+  width: 37.5%;
+}
+
+.five-eighths {
+  width: 62.5%;
+}
+
+.seven-eighths {
+  width: 87.5%;
+}
+
+/**
+ * Tenths
+ */
+.one-tenth {
+  width: 10%;
+}
+
+.three-tenths {
+  width: 30%;
+}
+
+.seven-tenths {
+  width: 70%;
+}
+
+.nine-tenths {
+  width: 90%;
+}
+
+/**
+ * Twelfths
+ */
+.one-twelfth {
+  width: 8.333%;
+}
+
+.five-twelfths {
+  width: 41.666%;
+}
+
+.seven-twelfths {
+  width: 58.333%;
+}
+
+.eleven-twelfths {
+  width: 91.666%;
+}
+
+/**
+ * Create the grids for different devices.
+ */
+@media all and (min-width: 80em) {
+  /*
+   * Hidden
+   */
+  .large-hidden {
+    display: none;
+  }
+
+  /**
+   * Whole
+   */
+  .large-one-whole {
+    width: 100%;
+  }
+
+  /**
+   * Halves
+   */
+  .large-one-half, .large-two-quarters, .large-three-sixths, .large-four-eighths, .large-five-tenths, .large-six-twelfths {
+    width: 50%;
+  }
+
+  /**
+   * Thirds
+   */
+  .large-one-third, .large-two-sixths, .large-four-twelfths {
+    width: 33.333%;
+  }
+
+  .large-two-thirds, .large-four-sixths, .large-eight-twelfths {
+    width: 66.666%;
+  }
+
+  /**
+   * Quarters
+   */
+  .large-one-quarter, .large-two-eighths, .large-three-twelfths {
+    width: 25%;
+  }
+
+  .large-three-quarters, .large-six-eighths, .large-nine-twelfths {
+    width: 75%;
+  }
+
+  /**
+   * Fifths
+   */
+  .large-one-fifth, .large-two-tenths {
+    width: 20%;
+  }
+
+  .large-two-fifths, .large-four-tenths {
+    width: 40%;
+  }
+
+  .large-three-fifths, .large-six-tenths {
+    width: 60%;
+  }
+
+  .large-four-fifths, .large-eight-tenths {
+    width: 80%;
+  }
+
+  /**
+   * Sixths
+   */
+  .large-one-sixth, .large-two-twelfths {
+    width: 16.666%;
+  }
+
+  .large-five-sixths, .large-ten-twelfths {
+    width: 83.333%;
+  }
+
+  /**
+   * Eighths
+   */
+  .large-one-eighth {
+    width: 12.5%;
+  }
+
+  .large-three-eighths {
+    width: 37.5%;
+  }
+
+  .large-five-eighths {
+    width: 62.5%;
+  }
+
+  .large-seven-eighths {
+    width: 87.5%;
+  }
+
+  /**
+   * Tenths
+   */
+  .large-one-tenth {
+    width: 10%;
+  }
+
+  .large-three-tenths {
+    width: 30%;
+  }
+
+  .large-seven-tenths {
+    width: 70%;
+  }
+
+  .large-nine-tenths {
+    width: 90%;
+  }
+
+  /**
+   * Twelfths
+   */
+  .large-one-twelfth {
+    width: 8.333%;
+  }
+
+  .large-five-twelfths {
+    width: 41.666%;
+  }
+
+  .large-seven-twelfths {
+    width: 58.333%;
+  }
+
+  .large-eleven-twelfths {
+    width: 91.666%;
+  }
+}
+@media all and (max-width: 80em) {
+  /*
+   * Hidden
+   */
+  .medium-hidden {
+    display: none;
+  }
+
+  /**
+   * Whole
+   */
+  .medium-one-whole {
+    width: 100%;
+  }
+
+  /**
+   * Halves
+   */
+  .medium-one-half, .medium-two-quarters, .medium-three-sixths, .medium-four-eighths, .medium-five-tenths, .medium-six-twelfths {
+    width: 50%;
+  }
+
+  /**
+   * Thirds
+   */
+  .medium-one-third, .medium-two-sixths, .medium-four-twelfths {
+    width: 33.333%;
+  }
+
+  .medium-two-thirds, .medium-four-sixths, .medium-eight-twelfths {
+    width: 66.666%;
+  }
+
+  /**
+   * Quarters
+   */
+  .medium-one-quarter, .medium-two-eighths, .medium-three-twelfths {
+    width: 25%;
+  }
+
+  .medium-three-quarters, .medium-six-eighths, .medium-nine-twelfths {
+    width: 75%;
+  }
+
+  /**
+   * Fifths
+   */
+  .medium-one-fifth, .medium-two-tenths {
+    width: 20%;
+  }
+
+  .medium-two-fifths, .medium-four-tenths {
+    width: 40%;
+  }
+
+  .medium-three-fifths, .medium-six-tenths {
+    width: 60%;
+  }
+
+  .medium-four-fifths, .medium-eight-tenths {
+    width: 80%;
+  }
+
+  /**
+   * Sixths
+   */
+  .medium-one-sixth, .medium-two-twelfths {
+    width: 16.666%;
+  }
+
+  .medium-five-sixths, .medium-ten-twelfths {
+    width: 83.333%;
+  }
+
+  /**
+   * Eighths
+   */
+  .medium-one-eighth {
+    width: 12.5%;
+  }
+
+  .medium-three-eighths {
+    width: 37.5%;
+  }
+
+  .medium-five-eighths {
+    width: 62.5%;
+  }
+
+  .medium-seven-eighths {
+    width: 87.5%;
+  }
+
+  /**
+   * Tenths
+   */
+  .medium-one-tenth {
+    width: 10%;
+  }
+
+  .medium-three-tenths {
+    width: 30%;
+  }
+
+  .medium-seven-tenths {
+    width: 70%;
+  }
+
+  .medium-nine-tenths {
+    width: 90%;
+  }
+
+  /**
+   * Twelfths
+   */
+  .medium-one-twelfth {
+    width: 8.333%;
+  }
+
+  .medium-five-twelfths {
+    width: 41.666%;
+  }
+
+  .medium-seven-twelfths {
+    width: 58.333%;
+  }
+
+  .medium-eleven-twelfths {
+    width: 91.666%;
+  }
+}
+@media all and (max-width: 30em) {
+  /*
+   * Hidden
+   */
+  .small-hidden {
+    display: none;
+  }
+
+  /**
+   * Whole
+   */
+  .small-one-whole {
+    width: 100%;
+  }
+
+  /**
+   * Halves
+   */
+  .small-one-half, .small-two-quarters, .small-three-sixths, .small-four-eighths, .small-five-tenths, .small-six-twelfths {
+    width: 50%;
+  }
+
+  /**
+   * Thirds
+   */
+  .small-one-third, .small-two-sixths, .small-four-twelfths {
+    width: 33.333%;
+  }
+
+  .small-two-thirds, .small-four-sixths, .small-eight-twelfths {
+    width: 66.666%;
+  }
+
+  /**
+   * Quarters
+   */
+  .small-one-quarter, .small-two-eighths, .small-three-twelfths {
+    width: 25%;
+  }
+
+  .small-three-quarters, .small-six-eighths, .small-nine-twelfths {
+    width: 75%;
+  }
+
+  /**
+   * Fifths
+   */
+  .small-one-fifth, .small-two-tenths {
+    width: 20%;
+  }
+
+  .small-two-fifths, .small-four-tenths {
+    width: 40%;
+  }
+
+  .small-three-fifths, .small-six-tenths {
+    width: 60%;
+  }
+
+  .small-four-fifths, .small-eight-tenths {
+    width: 80%;
+  }
+
+  /**
+   * Sixths
+   */
+  .small-one-sixth, .small-two-twelfths {
+    width: 16.666%;
+  }
+
+  .small-five-sixths, .small-ten-twelfths {
+    width: 83.333%;
+  }
+
+  /**
+   * Eighths
+   */
+  .small-one-eighth {
+    width: 12.5%;
+  }
+
+  .small-three-eighths {
+    width: 37.5%;
+  }
+
+  .small-five-eighths {
+    width: 62.5%;
+  }
+
+  .small-seven-eighths {
+    width: 87.5%;
+  }
+
+  /**
+   * Tenths
+   */
+  .small-one-tenth {
+    width: 10%;
+  }
+
+  .small-three-tenths {
+    width: 30%;
+  }
+
+  .small-seven-tenths {
+    width: 70%;
+  }
+
+  .small-nine-tenths {
+    width: 90%;
+  }
+
+  /**
+   * Twelfths
+   */
+  .small-one-twelfth {
+    width: 8.333%;
+  }
+
+  .small-five-twelfths {
+    width: 41.666%;
+  }
+
+  .small-seven-twelfths {
+    width: 58.333%;
+  }
+
+  .small-eleven-twelfths {
+    width: 91.666%;
+  }
+}
+/* grid system */
+/* blue */
+/* used for decoration and accents */
+/* red */
+/* used for decoration and accents */
 * {
   margin: 0;
   padding: 0;
@@ -399,13 +997,9 @@ code, pre {
 }
 
 body {
-  font: 1em/1.65 "Oswald", sans-serif;
+  font: 1em/1.65 "Lato", sans-serif;
   width: 100%;
   min-height: 100%;
-  background: -webkit-linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
-  background: -moz-linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
-  background: -o-linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
-  background: linear-gradient(45deg, #27ae60, #2ecc71, #2980b9, #2980b9);
 }
 
 a {
@@ -414,6 +1008,19 @@ a {
 }
 a:hover {
   color: #d83a31;
+}
+
+h2 {
+  line-height: 1.8;
+}
+
+h3 {
+  line-height: 1.6;
+  margin-top: 1em;
+}
+
+h4 {
+  margin-top: 1em;
 }
 
 /* entypo */
@@ -450,242 +1057,162 @@ a:hover {
   display: block;
 }
 
-/* GRID STUFF. HURRAY! */
-.one--half {
-  width: 50%;
-}
-
 .site--header {
   width: 100%;
-  height: 10em;
-  max-width: 60em;
-  background: rgba(51, 51, 51, 0.7);
-  color: white;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
+  height: auto;
+  padding: 5em 0;
+  margin-top: -3em !important;
+  background: #fff;
+  background: url("/assets/img/fancy_deboss.png");
 }
-@media (max-width: 55em) {
-  .site--header {
-    width: 95%;
-    margin: 2.5em auto;
-  }
-  .site--header .sidebar {
-    width: 30%;
-  }
-  .site--header .sidebar img {
-    width: 10em;
-    height: 10em;
-  }
-  .site--header .intro {
-    width: 70%;
-    padding: .5em 0 0 .5em;
-  }
+
+.header--inner {
+  margin: 0;
 }
-@media (max-width: 35em) {
-  .site--header {
-    width: 95%;
-    margin: 2.5em auto;
-  }
-  .site--header .sidebar {
-    width: 50%;
-  }
-  .site--header .sidebar img {
-    width: 10em;
-    height: 10em;
-  }
-  .site--header .intro {
-    width: 50%;
-    padding: .5em 0 0 .5em;
-  }
-  .site--header nav ul {
+.header--inner .logo {
+  margin: 0 auto;
+  width: 10em;
+  display: block;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+}
+
+.site--navigation ul > li {
+  list-style-type: none;
+  display: inline;
+  padding: 0 .5em 0 0;
+}
+
+@media all and (min-width: 80em) {
+  .nav--mobile {
     display: none;
   }
-  .site--header nav select {
+}
+@media all and (max-width: 80em) {
+  .nav--mobile {
+    display: none;
+  }
+}
+@media all and (max-width: 30em) {
+  .nav--mobile {
     display: block;
-    width: 95%;
-    background: #cccccc;
-    color: #333;
-    border: none;
-    padding: .5em 1em;
-    position: relative;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
+  }
+
+  .site--navigation {
+    display: none !important;
   }
 }
-
-.sidebar {
-  width: 20%;
-}
-.sidebar img {
-  width: 100%;
-  height: 10em;
-  -moz-border-radius-topleft: 3px;
-  -webkit-border-top-left-radius: 3px;
-  border-top-left-radius: 3px;
-  -moz-border-radius-bottomleft: 3px;
-  -webkit-border-bottom-left-radius: 3px;
-  border-bottom-left-radius: 3px;
+/* holds all the posts and pages */
+.content {
+  margin-top: 2.5em;
 }
 
-nav {
-  margin: .5em 0;
-}
-nav li {
-  display: inline;
-  list-style-type: none;
-}
-nav li a {
-  padding: .3em 1.4em;
-  background: #333;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-}
-nav li a:hover {
-  background: #dedede;
-}
-nav .nav--mobile {
-  display: none;
-}
-
-.intro {
-  width: 80%;
-  padding: 2em;
-}
-
-article {
-  font: 1em/1.65 "Lato", sans-serif;
+.article--large-preview {
   margin: 2.5em 0;
-  background: rgba(51, 51, 51, 0.7);
-  color: #cccccc;
-  position: relative;
-  padding-top: 2.5em;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
 }
-article img {
-  width: 100%;
-}
-article p {
-  line-height: 1.65em;
-  margin: 1em 0 0 0;
-}
-article p > code {
-  background: #333;
-  color: #cccccc;
-  padding: .2em .4em;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
-  -o-border-radius: 3px;
-  border-radius: 3px;
-}
-article h2 {
-  font: 2.5em/2 "Oswald", sans-serif;
-}
-article h3 {
-  font: 2.2em/2 "Lato", sans-serif;
-}
-article h4 {
-  font-size: 1.8em/1.8 "Lato", sans-serif;
-}
-@media (max-width: 35em) {
-  article h2 {
-    font: 2.5em/1.2 "Oswald", sans-serif;
-  }
+.article--large-preview h2 {
+  font-size: 2.5em;
 }
 
-.page--archive h2, .page--archive h3, .page--archive h4, .page--archive p {
-  letter-spacing: 0;
-}
-.page--archive h3 {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: .5em;
-}
-.page--archive .archive--article {
-  width: 50%;
-  list-style-type: none;
-  font-size: 1.6em;
-}
-.page--archive .archive--year {
-  text-align: center;
-}
-
-.has--category {
+.article--short-preview {
+  padding: 1em 0;
+  border-top: 1px solid #cdcdcd;
   position: relative;
 }
-.has--category:before {
-  content: attr(data-category);
-  color: #9fcfdf;
-  text-transform: uppercase;
-  width: 8.75em;
-  /* keep it equal.. :( */
-  /* I hate using magic numbers */
-  text-align: center;
-  font-weight: 400;
-  font-family: "Oswald", sans-serif;
-  letter-spacing: .31em;
-  word-spacing: .31em;
-  background: #40a0be;
-  border: 1px solid #266072;
-  padding: .5em;
-  position: absolute;
-  top: -1em;
-  left: -1em;
-}
-.has--category:after {
-  /* little triangle after the box on the first article */
-  width: 0;
-  height: 0;
-  border-left: 1.4em solid #266072;
-  border-top: 1em solid transparent;
-  content: "";
-  position: absolute;
-  top: -1em;
-  left: 8.85em;
-}
-@media (max-width: 55em) {
-  .has--category {
-    width: 95%;
-    margin: 2.5em auto;
-    background: rgba(51, 51, 51, 0.7);
-    color: #cccccc;
-    position: relative;
-    padding-top: 2.5em;
-  }
-  .has--category:before {
-    left: 1em;
-  }
-  .has--category:after {
-    left: 10.85em;
-  }
-}
-
-.article--read-more {
+.article--short-preview h2 {
+  padding-left: 2em;
   display: block;
-  text-align: right;
+  position: relative;
+}
+.article--short-preview h2:before {
+  font-family: 'entypo', sans-serif;
+  position: absolute;
+  top: .3em;
+  left: 0;
+  padding: .2em .5em;
+  color: #fff;
+  font-size: .65em;
+  border-radius: 100%;
+}
+.article--short-preview h2[data-category*="coding"]:before, .article--short-preview h2[data-category*="UI/X"]:before {
+  content: "\e714";
+  background: #2c3e50;
+}
+.article--short-preview h2[data-category*="mixtape"]:before {
+  content: "\266a";
+  background: #ff9900;
+  padding: .2em .7em;
+}
+.article--short-preview h2[data-category*="link"]:before {
+  content: "\27a6";
+  background: #2ecc71;
+  padding: .4em .6em;
+}
+.article--short-preview h2[data-category*="thoughts"]:before {
+  content: "\e720";
+  background: #c7956d;
+}
+.article--short-preview h2[data-category*="personal"]:before {
+  content: "\1f464";
+  background: #c7956d;
+}
+.article--short-preview:last-of-type {
+  border-bottom: 1px solid #cdcdcd;
+}
+
+.archive-text--small {
+  color: #a4a4a4;
+  padding-top: .75em;
+  font-size: .75em;
+}
+
+.article p > code {
+  background: #333;
+  color: #cdcdcd;
+  padding: .2em .5em;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+}
+.article img {
+  max-width: 100%;
 }
 
 .article--footer {
-  font-size: .8em;
-  margin-top: 1.5em;
-  padding-top: .5em;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  margin: 1.5em 0 0 0;
+  border-top: 1px solid #cdcdcd;
 }
-.article--footer .author {
+
+.text--right {
   text-align: right;
+}
+
+.text--center {
+  text-align: center;
+}
+
+.love {
+  color: #dd0606;
+}
+
+.site--footer {
+  width: 100%;
+  height: auto;
+  background: #333;
+  background: url("/assets/img/subtle_carbon.png");
+  padding: 2.5em 0;
+  color: #fff;
+}
+.site--footer .site--footer--inner {
+  width: 100%;
+  max-width: 50em;
+  margin: 0 auto;
+}
+.site--footer .site--footer--inner ul li {
+  list-style-type: none;
 }
