--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -125,25 +125,43 @@ h4 {
             display: inline;
             padding: 0 .5em 0 0;
         }
-    }
 
     @include breakpoint(large) {
         .nav--mobile {display: none;}
     }
-
+    
     @include breakpoint(medium) {
         .nav--mobile {display: none;}
     }
 
+
     @include breakpoint(small) {
-        .nav--mobile {display: block;}
-        .site--navigation {display: none !important;}
+            .nav--mobile {
+                display: block;
+                background: #333;
+                color: #ddd;
+                padding: .5em 1em;
+                margin: 0 auto;
+                border: none;
+                @include border-radius(3px); 
+                @include appearance(none);
+                
+                /* these two lines remove the drop-down arrow from firefox */
+                text-indent: 0.01px; 
+                text-overflow: ''; 
+            }
+        ul > li {display: none;}
     }
 
+}
 
 /* holds all the posts and pages */
 .content {
     margin-top: 2.5em;
+
+    @include breakpoint(medium) {
+        padding: 0 1.5em;
+    }
 }
 
 
