--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1023,6 +1023,10 @@ h4 {
   margin-top: 1em;
 }
 
+ul {
+  margin: .5em 0 .5em 1em;
+}
+
 /* entypo */
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
