New Style for a small feedback box underneath the posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,5 +12,10 @@
         written by <a href="http://google.com/+KevinGimbel">Kevin Gimbel</a>
       </div>
     </footer>
+
+      <div class="feedback">
+        <h4 class="feedback--headline">Enjoyed this &raquo;{{page.category}}&laquo; post?</h4>
+          <p>I'd appreciate your feedback on <a href="http://twitter.com/_kevinatari">Twitter</a> as well as request for further posts about web-related stuff.</p>
+      </div>
 </article>
 {% include footer.html %}
