--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1228,6 +1228,17 @@ ul {
   border-top: 1px solid #cdcdcd;
 }
 
+.feedback {
+  background: #f2f2f2;
+  padding: 1em;
+  border-left: 0.25em solid #d83a31;
+  margin-top: 1em;
+}
+.feedback .feedback--headline {
+  text-transform: capitalize;
+  margin-top: 0;
+}
+
 .text--right {
   text-align: right;
 }
