[Optimizations] - added minified version of main.js; added loading script to load the JS after DOM Load; moved JS to the bottom of the page after </body>; minified style.css

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,9 +7,11 @@
         "includes/bullgrid"; /* grid system */
 
 
-
+/* Fonts */
 $baseFont: 'Lato', sans-serif;
 
+
+/* Colors */
 /* blue */
 $color--main:#40a0be;
 /* used for decoration and accents */
