--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
 // Add a script element as a child of the body
 function downloadJSAtOnload() {
 var element = document.createElement('script');
-element.src = 'assets/js/main.min.js';
+element.src = '/assets/js/main.min.js';
 document.body.appendChild(element);
 }
 // Check for browser support of event handling capability
