added link type to atom.xml as well as an icon and a subtitle; added feed url to head

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+    <link rel="alternate" type="application/atom+xml" title="kevingimbel.com Atom Feed" href="http://kevingimbel.com/atom.xml">
 </head>
 <body>
  <a href="" class="backtop" id="back-top"></a>
