updated about, new avatar [via gravatar], article.json :penguin:

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,11 +26,13 @@
 
   <header class="site--header  g one-whole" id="site-header">
     <div class="header--inner">
-        <a href="/">
-          <img class="logo" src="/assets/img/2013_11_kevingimbel.jpg" alt="Kevin Gimbel (with funny, curly hair)" />
-        </a>
+        <div class="logo">
+            <a href="/">
+                <img src="http://www.gravatar.com/avatar/6d391d8c3a528122f3f6c991821350ac?s=400" alt="Kevin Gimbel" />
+            </a>
+        </div>
         <div class="intro g one-whole text--center">
-        <h1>Kevin Gimbel</h1>
+        <h1>Hey, I'm Kevin</h1>
         <p><span id="phrase">I build things.</span></p>
     <nav class="site--navigation" role="navigation">
       <ul>
